# tame.orig

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: main.rs  opts.rs
agent/src/actors/: error.rs  mod.rs
agent/src/actors/cmd_executor/: actor.rs  mod.rs
agent/src/actors/cmd_executor/actor/: consumer.rs  process_runner.rs
agent/src/actors/forwarder/: actor.rs  mod.rs
agent/src/actors/forwarder/actor/: consumer.rs  proc_runner.rs  process_runner.rs
agent/src/actors/supervisor/: actor.rs  mod.rs
agent/src/actors/supervisor/actor/: engine.rs  executor.rs  forwarder.rs
agent/src/actors/top_executor/: actor.rs  mod.rs
agent/src/actors/top_executor/actor/: consumer.rs  process_tracker.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/cmd/: mod.rs
protocol/src/cmd/log_flow/: mod.rs  tracer.rs
protocol/src/cmd/process_monitor/: flow.rs
protocol/src/log_flow/: flow.rs  tracer.rs
protocol/src/plain_logs/: flow.rs  mod.rs  tracer.rs
protocol/src/process_monitor/: flow.rs  tracer.rs
protocol/src/top/: mod.rs
protocol/src/top/process_list/: flow.rs  tracer.rs
service/: Cargo.toml  README.md
