[package]
name = "tame"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/agent"
homepage = "https://github.com/rillrate/agent"
documentation = "https://docs.rs/rillrate-agent/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate Agent"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.50"
clap = "3.0.0-beta.2"
derive_more = "0.99.14"
env_logger = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
meio = "0.89.4"
rill-engine = "0.30.0-alpha.7"
rill-protocol = "0.30.0-alpha.7"
tame-protocol = { version = "0.1.0", path = "../protocol" }
thiserror = "1.0.25"
tokio = "1.7.1"
tokio-stream = { version = "0.1.6", features = ["sync", "io-util"] }
