[package]
name = "rillrate-logs-protocol"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/rillrate/logs"
homepage = "https://github.com/rillrate/logs"
documentation = "https://docs.rs/rillrate-logs-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate agent for logging"

[dependencies]
rill-engine = { version = "0.30.0-alpha.6", optional = true }
rill-protocol = "0.30.0-alpha.6"
serde = "1.0.126"

[features]
default = ["tracers"]
tracers = ["rill-engine"]
