[package]
name = "rillrate-agent-protocol"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/rillrate/agent"
homepage = "https://github.com/rillrate/agent"
documentation = "https://docs.rs/rillrate-agent-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate Agent"

[dependencies]
derive_more = "0.99.14"
once_cell = "1.8.0"
rill-engine = { version = "0.30.0-alpha.6", optional = true }
rill-protocol = "0.30.0-alpha.6"
serde = "1.0.126"

[features]
default = ["tracers"]
tracers = ["rill-engine"]
