[package]
name = "tame-protocol"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/rillrate/tame"
homepage = "https://github.com/rillrate/tame"
documentation = "https://docs.rs/tame-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate Agent"

[dependencies]
derive_more = "0.99.14"
once_cell = "1.8.0"
rill-engine = { version = "0.31.0", optional = true }
rill-protocol = "0.31.0"
serde = "1.0.126"
vectorize = "0.1.0"

[features]
default = ["tracers"]
tracers = ["rill-engine"]
