[package]
name = "tamed"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/rillrate/tame"
homepage = "https://github.com/rillrate/tame"
documentation = "https://docs.rs/tame/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate Service"

[dependencies]
